--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Hello, GitHub!</title>
-  </head>
-  <body>
-    <h1>Hello, GitHub!</h1>
-    <p>Welcome to your first web page.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My First Webpage</title>
+</head>
+<body>
+  <h1>Hello, World!</h1>
+  <p>This is my first web page on GitHub.</p>
+</body>
 </html>
